solve 2024 Day 17 Part 1

--- a/2024/advent-of-code-2024/Cargo.toml
+++ b/2024/advent-of-code-2024/Cargo.toml
@@ -128,3 +128,11 @@ path = "day15part2.rs"
 name = "day16part1"
 path = "day16part1.rs"
 
+[[bin]]
+name = "day16part2"
+path = "day16part2.rs"
+
+[[bin]]
+name = "day17part1"
+path = "day17part1.rs"
+
